--- a/backend/config.env
+++ b/backend/config.env
@@ -1,2 +1,2 @@
-ATLAS_URI="mongodb+srv://benjaminwinter:ZJMY0VvMhraXoZD6@cluster0.pykg7bf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+ATLAS_URI =mongodb+srv://lamnguyen:Hoanglam162732435361@cluster0.zxbqekj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0;
 PORT=3001
