Implemented winning/losing and saving scores to database

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,2 +1,2 @@
-ATLAS_URI="mongodb+srv://benjaminwinter:ZJMY0VvMhraXoZD6@cluster0.pykg7bf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+ATLAS_URI="mongodb+srv://nataleebishop:MBmqktKFhHZnikU3@cluster0.u62z8a9.mongodb.net/"
 PORT=3001
